--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -1,112 +1,130 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
+  <head>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.css">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.css"
+    />
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.js"></script>
 
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Chat</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../static/css/style.css" />
+  </head>
+  <body>
+    <header>
+      <form th:action="@{/chat}" method="get">
+        <p>Информация:</p>
+        <p th:text="${about}"></p>
+      </form>
 
+      <form th:action="@{/main}" method="post">
+        <p>Личный кабинет</p>
+        <input type="submit" value="Personal account" class="button" />
+      </form>
+    </header>
 
-</head>
-<body>
-<form th:action="@{/chat}" method="get">
-    <p th:text="${about}"></p>
-</form>
-
-<form th:action="@{/main}" method="post">
-    <p>Личный кабинет</p>
-    <input type="submit" value="Personal account" class="button"/>
-</form>
-
-
-<div>
-    <table th:action="@{/chat}" method="get" class="table">
-        <caption>Сообщения ДЛЯ вас</caption>
+    <div>
+      <table th:action="@{/chat}" method="get" class="table">
+        <caption>
+          <h4>Сообщения ДЛЯ вас</h4>
+        </caption>
         <tr class="thead">
-            <th>message read, delete</th>
-            <th>sender</th>
-            <th>text</th>
-            <th>timestamps</th>
-            <th>file</th>
+          <th>message read, delete</th>
+          <th>sender</th>
+          <th>text</th>
+          <th>timestamps</th>
+          <th>file</th>
         </tr>
         <tr th:each="message : ${messagesToUser}" class="tbody">
+          <td>
+            <form
+              th:action="@{/chat/delete/{messageID}(messageID=${message.id})}"
+              method="post"
+            >
+              <input type="hidden" name="action" value="delete" />
+              <button type="submit" class="button">Delete</button>
+            </form>
+          </td>
+          <td th:utext="${message.sender}">sender</td>
+          <td th:utext="${message.text}">text</td>
+          <td th:utext="${message.timestamps}">timestamps</td>
+          <!--   <td th:utext="${message.fileName}">filename</td>-->
+          <!--<td><img th:src="@{/uploads/{filename}(filename = ${message.fileName})}"></td>-->
+
+          <!-- <td> <a th:href="@{/uploads/{filename}(filename = ${message.fileName})}" download/>Скачать файл</td> -->
+          <th:block th:if="${message.fileName != 'null' }">
             <td>
-                <form th:action="@{/chat/delete/{messageID}(messageID=${message.id})}" method="post">
-                    <input type="hidden" name="action" value="delete"/>
-                    <button type="submit" class="button">Delete</button>
-                </form></td>
-            <td th:utext="${message.sender}">sender</td>
-            <td th:utext="${message.text}">text</td>
-            <td th:utext="${message.timestamps}">timestamps</td>
-            <!--   <td th:utext="${message.fileName}">filename</td>-->
-            <!--<td><img th:src="@{/uploads/{filename}(filename = ${message.fileName})}"></td>-->
+              <a th:href="@{|/chat/download?fileName=${message.fileName}|}"
+                >download file</a
+              >
+            </td>
+          </th:block>
+        </tr>
+      </table>
 
-           <!-- <td> <a th:href="@{/uploads/{filename}(filename = ${message.fileName})}" download/>Скачать файл</td> -->
-            <th:block th:if="${message.fileName != 'null' }">
-                <td> <a th:href="@{|/chat/download?fileName=${message.fileName}|}">download file</a> </td>
-            </th:block>
-    </table>
-
-
-
-    <table th:action="@{/chat}" method="get" class="table">
-        <caption>Сообщения ОТ вас </caption>
+      <table th:action="@{/chat}" method="get" class="table">
+        <caption>
+          <h4>Сообщения ОТ вас</h4>
+        </caption>
         <tr class="thead">
-            <th>recipients</th>
-            <th>sender</th>
-            <th>text</th>
-            <th>timestamps</th>
-            <th>file</th>
+          <th>recipients</th>
+          <th>sender</th>
+          <th>text</th>
+          <th>timestamps</th>
+          <th>file</th>
         </tr>
         <tr th:each="message : ${messagesFromUser}" class="tbody">
-            <td th:utext="${message.recipients}">recipients</td>
-            <td th:utext="${message.sender}">sender</td>
-            <td th:utext="${message.text}">text</td>
-            <td th:utext="${message.timestamps}">timestamps</td>
+          <td th:utext="${message.recipients}">recipients</td>
+          <td th:utext="${message.sender}">sender</td>
+          <td th:utext="${message.text}">text</td>
+          <td th:utext="${message.timestamps}">timestamps</td>
 
-            <th:block th:if="${message.fileName != 'null' }">
-                <td> <a th:href="@{|/chat/download?fileName=${message.fileName}|}">download file</a> </td>
-            </th:block>
-    </table>
+          <th:block th:if="${message.fileName != 'null' }">
+            <td>
+              <a th:href="@{|/chat/download?fileName=${message.fileName}|}"
+                >download file</a
+              >
+            </td>
+          </th:block>
+        </tr>
+      </table>
+    </div>
 
-</div>
-
-
-<div>
-    <p>Отправить новое сообщение</p>
-    <form id="newmsgform" th:action="@{/chat}" method="post" enctype="multipart/form-data">
-
+    <div style="align-items: center">
+      <form
+        id="newmsgform"
+        th:action="@{/chat}"
+        method="post"
+        enctype="multipart/form-data"
+      >
+        <h4>Отправить новое сообщение</h4>
         <p><textarea rows="10" cols="45" name="text" required></textarea></p>
-        <input type="file" name="file" class="button"/>
+        <input type="file" name="file" class="button" />
         <select name="selectedusers" required multiple="multiple">
-            <option th:each="user: ${users}"
-                    th:value="${user.id}" th:text="${user}">
-
+          <option
+            th:each="user: ${users}"
+            th:value="${user.id}"
+            th:text="${user}"
+          ></option>
         </select>
 
-        <button class="button" type="submit" form="newmsgform">Отправить сообщение</button>
-    </form>
-</div>
+        <button class="button" type="submit" form="newmsgform">
+          Отправить сообщение
+        </button>
+      </form>
+    </div>
 
-
-<script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
-<script src="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.js"></script>
-<script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
+    <script src="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.js"></script>
+    <script>
       $(function () {
-        $('select').multipleSelect()
-      })
-
-
-</script>
-
-
-</body>
-<footer>
-
-</footer>
+        $("select").multipleSelect();
+      });
+    </script>
+  </body>
+  <footer></footer>
 </html>
